- get crate geo index
