# server/controllers/v1/imagesController.js
@@ -1,6 +1,8 @@
 const { UploadMiddlewares, ImagesMiddlewares } = require('../../middlewares');
 const multiparty = require('connect-multiparty');
 const Controller = require('../../utils/baseController');
+const { ImageValidationRules } = require('../../rules');
+const bodyValidator = require('../../utils/bodyValidator');
 
 
 class ImagesController extends Controller {
@@ -14,6 +16,22 @@ class ImagesController extends Controller {
             ImagesMiddlewares.getImageGPS,
             UploadMiddlewares.uploadToS3,
             ImagesMiddlewares.saveData,
+            ImagesMiddlewares.formatImage,
+            this.sendResponse()
+        ];
+    }
+
+    /**
+     * Upload file
+     */
+    get getImages() {
+        return [
+            bodyValidator([
+                ImageValidationRules.location,
+                ImageValidationRules.radius
+            ]),
+            ImagesMiddlewares.getImages,
+            ImagesMiddlewares.formatImages,
             this.sendResponse()
         ];
     }
